<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".web.Activity.MainActivity.MainActivity">
    <item
        android:id="@+id/recommendMenu"
        android:title="@string/recommendMenu"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/searchMenu"
        android:title="@string/SearchMenu"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/genreMenu"
        android:title="@string/genreMenu"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/authorMenu"
        android:title="@string/authorMenu"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/myMusicMenu"
        android:title="@string/myMusicMenu"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
